Modified getAllUser method